Use coverage to check test coverage Configure py.test to pick up tests.py automatically.

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,15 @@ envlist = py27,py34,pep8,py3pep8,doc
 [testenv]
 deps =
     pytest
+    coverage
     WebTest
     pyasn1
     py27: dnspython
     py34: dnspython3
-commands = py.test {posargs} tests.py
+    py27: mock
+commands =
+    coverage run -m pytest --capture=no --strict {posargs}
+    coverage report -m
 
 [testenv:pep8]
 basepython = python2.7
@@ -36,6 +40,9 @@ basepython = python2.7
 commands =
     doc8 --allow-long-titles README 
     python setup.py check --restructuredtext --metadata --strict
+
+[pytest]
+python_files = tests*.py
 
 [flake8]
 exclude = .tox,*.egg,dist,build
