Make README markdown compatible again
README must be valid markdown (for github) and restructured text (for
PyPI).

--- a/tox.ini
+++ b/tox.ini
@@ -36,10 +36,13 @@ commands =
 deps =
     doc8
     docutils
+    markdown
 basepython = python2.7
 commands =
     doc8 --allow-long-titles README
     python setup.py check --restructuredtext --metadata --strict
+    rst2html.py README {toxworkdir}/README.html
+    markdown_py README.md -f {toxworkdir}/README.md.html
 
 [pytest]
 python_files = tests*.py
