--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,33 @@
 [tox]
-envlist = py27,py34,pep8,py3pep8,doc
+minversion = 2.3.1
+envlist = py27,py34,py35,py36,pep8,py3pep8,doc
+skip_missing_interpreters = true
 
 [testenv]
 deps =
-    pytest
-    coverage
-    WebTest
-    pyasn1
+   .[tests]
 commands =
-    coverage run -m pytest --capture=no --strict {posargs}
-    coverage report -m
+    {envpython} -m coverage run -m pytest --capture=no --strict {posargs}
+    {envpython} -m coverage report -m
 
 [testenv:py27]
 deps =
-    {[testenv]deps}
-    dnspython
-    mock
-
-[testenv:py34]
-deps =
-    {[testenv]deps}
-    dnspython3
+   .[tests]
+   mock
 
 [testenv:pep8]
 basepython = python2.7
 deps =
-    flake8
-    flake8-import-order
-    pep8-naming
+    .[test_pep8]
 commands =
-    flake8 {posargs}
+    {envpython} -m flake8
 
 [testenv:py3pep8]
-basepython = python3.4
+basepython = python3
 deps =
-    flake8
-    flake8-import-order
-    pep8-naming
+    .[test_pep8]
 commands =
-    flake8 {posargs}
+    {envpython} -m flake8
 
 [testenv:doc]
 deps =
