--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,20 @@ cache: pip
 matrix:
   include:
     - python: 2.7
-      env: TOXENV=py27
-    - python: 3.4
-      env: TOXENV=py34
+      env: TOXENV=py27-asn1crypto
     - python: 3.5
-      env: TOXENV=py35
+      env: TOXENV=py35-asn1crypto
     - python: 3.6
-      env: TOXENV=py36
+      env: TOXENV=py36-asn1crypto
+    - python: 2.7
+      env: TOXENV=py27-pyasn1
+    - python: 3.5
+      env: TOXENV=py35-pyasn1
+    - python: 3.6
+      env: TOXENV=py36-pyasn1
     - python: 2.7
       env: TOXENV=pep8
-    - python: 3.5
+    - python: 3.6
       env: TOXENV=py3pep8
 
 install:
