--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,27 @@
 [tox]
 minversion = 2.3.1
-envlist = py27,py34,py35,py36,pep8,py3pep8,doc
+envlist = {py27,py35,py36}-{asn1crypto,pyasn1},pep8,py3pep8,doc,coverage-report
 skip_missing_interpreters = true
 
 [testenv]
 deps =
-   .[tests]
+    .[tests]
+    py27: mock
+    pyasn1: pyasn1
+    asn1crypto: asn1crypto>=0.23
+setenv =
+    asn1crypto: KDCPROXY_ASN1MOD=asn1crypto
+    pyasn1: KDCPROXY_ASN1MOD=pyasn1
 commands =
-    {envpython} -m coverage run -m pytest --capture=no --strict {posargs}
-    {envpython} -m coverage report -m
+    {envpython} -m coverage run --parallel \
+        -m pytest --capture=no --strict {posargs}
 
-[testenv:py27]
-deps =
-   .[tests]
-   mock
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
+commands =
+    {envpython} -m coverage combine
+    {envpython} -m coverage report --show-missing
 
 [testenv:pep8]
 basepython = python2.7
