[CI] Pass pep8 again and bump Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,30 @@
 sudo: false
-
 language: python
-
 cache: pip
+dist: xenial
 
 matrix:
   include:
-    - python: 2.7
-      env: TOXENV=py27-asn1crypto
-    - python: 3.5
-      env: TOXENV=py35-asn1crypto
+    # el8
     - python: 3.6
       env: TOXENV=py36-asn1crypto
+    - python: 3.6
+      env: TOXENV=py3pep8
+
+    # latest 2-series
+    - python: 2.7
+      env: TOXENV=py27-asn1crypto
     - python: 2.7
       env: TOXENV=py27-pyasn1
-    - python: 3.5
-      env: TOXENV=py35-pyasn1
-    - python: 3.6
-      env: TOXENV=py36-pyasn1
     - python: 2.7
       env: TOXENV=pep8
-    - python: 3.6
+
+    # latest 3-series
+    - python: 3.7
+      env: TOXENV=py37-asn1crypto
+    - python: 3.7
+      env: TOXENV=py37-pyasn1
+    - python: 3.7
       env: TOXENV=py3pep8
 
 install:
