--- a/tox.ini
+++ b/tox.ini
@@ -57,3 +57,5 @@ exclude = .tox,*.egg,dist,build
 show-source = true
 max-line-length = 79
 application-import-names = kdcproxy
+# N815 is camelCase names; N813 is for changing case on import
+ignore = N815, N813
