--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
 minversion = 2.3.1
-envlist = {py27,py35,py36}-{asn1crypto,pyasn1},pep8,py3pep8,doc,coverage-report
+envlist = {py36,py37,py38,py39}-{asn1crypto,pyasn1},pep8,py3pep8,doc,coverage-report
 skip_missing_interpreters = true
 
 [testenv]
 deps =
     .[tests]
-    py27: mock
     pyasn1: pyasn1
     asn1crypto: asn1crypto>=0.23
 setenv =
@@ -24,7 +23,7 @@ commands =
     {envpython} -m coverage report --show-missing
 
 [testenv:pep8]
-basepython = python2.7
+basepython = python3
 deps =
     .[test_pep8]
 commands =
@@ -42,7 +41,7 @@ deps =
     doc8
     docutils
     markdown
-basepython = python2.7
+basepython = python3
 commands =
     doc8 --allow-long-titles README
     python setup.py check --restructuredtext --metadata --strict
