Drop asn1crypto and just support pyasn1
I added asn1crypto support three years ago in #33, because I was under
the impression that other Python packages such as PyCA cryptography
were going to standardize on asn1crypto. Since 2017 cryptography and
other dependencies have dropped asn1crypto. kdcproxy is currently the
only package in RHEL that depends on python-asn1crypto.

Let's keep it simple and just support pyasn1.

Signed-off-by: Christian Heimes <cheimes@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,11 @@
 [tox]
 minversion = 2.3.1
-envlist = {py36,py37,py38,py39}-{asn1crypto,pyasn1},pep8,py3pep8,doc,coverage-report
+envlist = py36,py37,py38,py39,pep8,py3pep8,doc,coverage-report
 skip_missing_interpreters = true
 
 [testenv]
 deps =
     .[tests]
-    pyasn1: pyasn1
-    asn1crypto: asn1crypto>=0.23
-setenv =
-    asn1crypto: KDCPROXY_ASN1MOD=asn1crypto
-    pyasn1: KDCPROXY_ASN1MOD=pyasn1
 commands =
     {envpython} -m coverage run --parallel \
         -m pytest --capture=no --strict {posargs}
