Drop coverage from tests
To my knowledge, we've never looked at or done anything with this
output.  Test coverage is a noble goal, but this project is mostly
complete, so we don't expect heavy development soon.

Requested-by: Petr Viktorin <pviktori@redhat.com>
Signed-off-by: Robbie Harwood <rharwood@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,13 @@
 [tox]
 minversion = 2.3.1
-envlist = py36,py37,py38,py39,pep8,py3pep8,doc,coverage-report
+envlist = py36,py37,py38,py39,pep8,py3pep8,doc
 skip_missing_interpreters = true
 
 [testenv]
 deps =
     .[tests]
 commands =
-    {envpython} -m coverage run --parallel \
-        -m pytest --capture=no --strict {posargs}
-
-[testenv:coverage-report]
-deps = coverage
-skip_install = true
-commands =
-    {envpython} -m coverage combine
-    {envpython} -m coverage report --show-missing
+    {envpython} -m pytest --capture=no --strict {posargs}
 
 [testenv:pep8]
 basepython = python3
