--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.3.1
-envlist = py36,py37,py38,py39,pep8,py3pep8,doc
+envlist = py38,py39,py310,py311,pep8,py3pep8,doc
 skip_missing_interpreters = true
 
 [testenv]
@@ -43,5 +43,5 @@ exclude = .tox,*.egg,dist,build
 show-source = true
 max-line-length = 79
 application-import-names = kdcproxy
-# N815 is camelCase names; N813 is for changing case on import
-ignore = N815, N813
+# N815 is camelCase names; N813 is for changing case on import; N818 Exception name
+ignore = N815, N813, N818
