Fix "doc" tox task
Signed-off-by: Julien Rische <jrische@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -28,11 +28,12 @@ deps =
     doc8
     docutils
     markdown
+    rst2html
 basepython = python3
 commands =
     doc8 --allow-long-titles README
     python setup.py check --restructuredtext --metadata --strict
-    rst2html.py README {toxworkdir}/README.html
+    rst2html README {toxworkdir}/README.html
     markdown_py README.md -f {toxworkdir}/README.md.html
 
 [pytest]
