Update setup.py and tox.ini
Signed-off-by: Julien Rische <jrische@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.3.1
-envlist = py38,py39,py310,py311,pep8,py3pep8,doc
+envlist = py38,py39,py310,py311,py312,py314,pep8,py3pep8,doc
 skip_missing_interpreters = true
 
 [testenv]
@@ -29,6 +29,7 @@ deps =
     docutils
     markdown
     rst2html
+    setuptools
 basepython = python3
 commands =
     doc8 --allow-long-titles README
@@ -45,4 +46,4 @@ show-source = true
 max-line-length = 79
 application-import-names = kdcproxy
 # N815 is camelCase names; N813 is for changing case on import; N818 Exception name
-ignore = N815, N813, N818
+extend-ignore = N815, N813, N818
